force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/Sales_Rep_Profile_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Store Sales Rep Profile Snapshot</description>
    <label>Sales Rep Profile Snapshot</label>
    <nameField>
        <label>Sales Rep Profile Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Rep Profile Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>