force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the sales profile for which the snapshot was taken was active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>