force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Annual_Win_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Win_Quota__c</fullName>
    <label>Annual Win Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>