force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Average_Deal_Size_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size_Percentage__c</fullName>
    <label>Average Deal Size Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>