force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Average_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Sales_Price__c</fullName>
    <label>Average Sales Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>