force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Close_rate_monthly_opp_count__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_monthly_opp_count__c</fullName>
    <description>This field contains the count of the monthly opp which closedate is changed.</description>
    <label>Close rate monthly opp count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>