force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Close_rate_Quarterly_opp_amount__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_Quarterly_opp_amount__c</fullName>
    <description>This field contains the sum of the amount that is moved from the quarter.</description>
    <label>Close rate Quarterly opp amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>