force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Close_rate_YTD_opp_count__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_YTD_opp_count__c</fullName>
    <description>This field stores the count of the opp whose closed date is changed.</description>
    <label>Close rate YTD opp count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>