force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Current_Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Opportunities__c</fullName>
    <label>Current Active Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>