force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Current_Fiscal_Months__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Months__c</fullName>
    <label>Current Fiscal Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>