force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Current_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Current_Pipeline__c</fullName>
    <label>Current Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>