force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/FMCustom_Metric_11_percentage__c.field-meta.xml
<CustomField>
    <fullName>FMCustom_Metric_11_percentage__c</fullName>
    <label>FMCustom_Metric_11 percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>