force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/FMCustom_Metric_12Goal__c.field-meta.xml
<CustomField>
    <fullName>FMCustom_Metric_12Goal__c</fullName>
    <label>FMCustom Metric 12Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>