force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_12m_Avg_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_Avg_Selling_Price__c</fullName>
    <label>Goal 12m Avg Selling Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>