force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_12m_Lead_To_Opp_Conv_Rate__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_Lead_To_Opp_Conv_Rate__c</fullName>
    <label>Goal 12m Lead To Opp Conv Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>