force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_12m_length_of_sales_cycle__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_length_of_sales_cycle__c</fullName>
    <label>Goal 12m length of sales cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>