force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_12m_rolling_close_rate__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_rolling_close_rate__c</fullName>
    <label>Goal 12m rolling close rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>