force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_12Month_Rolling_Opptys_Won_amt__c.field-meta.xml
<CustomField>
    <fullName>Goal_12Month_Rolling_Opptys_Won_amt__c</fullName>
    <label>Goal 12Month Rolling Opptys Won $ amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>