force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_Average_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Goal_Average_Deal_Size__c</fullName>
    <label>Goal Average Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>