force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_Number_of_meetings_12_months__c.field-meta.xml
<CustomField>
    <fullName>Goal_Number_of_meetings_12_months__c</fullName>
    <label>Goal Number of meetings 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>