force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_of_leads_for_1_win__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_leads_for_1_win__c</fullName>
    <label>Goal # of leads for 1 win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>