force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_of_YTD_meetings__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_YTD_meetings__c</fullName>
    <label>Goal # of YTD meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>