force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Goal_YTD_Opportunities_Added__c.field-meta.xml
<CustomField>
    <fullName>Goal_YTD_Opportunities_Added__c</fullName>
    <label>Goal YTD Opportunities Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>