force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Interim_Manager__c.field-meta.xml
<CustomField>
    <fullName>Interim_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim Manager</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Rep Profile Snapshots (Interim Manager)</relationshipLabel>
    <relationshipName>Sales_Rep_Profile_Snapshots2</relationshipName>
    <type>Lookup</type>
</CustomField>