force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Level_picklist_10__c.field-meta.xml
<CustomField>
    <fullName>Level_picklist_10__c</fullName>
    <description>snapshot tenth company level</description>
    <label>Level_picklist_10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_Picklist_10</valueSetName>
    </valueSet>
</CustomField>