force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Level_picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Level_picklist_2__c</fullName>
    <description>snapshot second company level</description>
    <label>Level_picklist_2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_Picklist_2</valueSetName>
    </valueSet>
</CustomField>