force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Month_11_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Month_11_Quota_Amount__c</fullName>
    <label>Month 11 Quota Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>