force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Average_Win_size__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Average_Win_size__c</fullName>
    <label>Monthly Average $ Win size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>