force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Average_Win_size_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Average_Win_size_percentage__c</fullName>
    <label>Monthly Average $ Win size percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>