force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_funnel_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Monthly_funnel_opportunities__c</fullName>
    <label>Monthly funnel opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>