force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Lead_Added__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Lead_Added__c</fullName>
    <label>Monthly Lead Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>