force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Lead_to_Opp_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Lead_to_Opp_Conversion_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Monthly lead to QO conversion rate</description>
    <label>Monthly Lead to Opp Conversion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>