force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_lost_QO_Amt__c.field-meta.xml
<CustomField>
    <fullName>Monthly_lost_QO_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly lost QO Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>