force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Opp_Added_amt_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opp_Added_amt_percentage__c</fullName>
    <label>Monthly_Opp_Added_amt_percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>