force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_opp_lost__c.field-meta.xml
<CustomField>
    <fullName>Monthly_opp_lost__c</fullName>
    <label>Monthly opp lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>