force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Opportunities_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opportunities_Added_amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly funnel $ amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>