force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Opportunities_added_to_Qualifie__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opportunities_added_to_Qualifie__c</fullName>
    <label>Monthly Opportunities added to Qualifie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>