force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Opportunities_Closed_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opportunities_Closed_percentage__c</fullName>
    <label>Monthly Opportunities Closed percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>