force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_QO_added_Quantitative__c.field-meta.xml
<CustomField>
    <fullName>Monthly_QO_added_Quantitative__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly QO added Quantitative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>