force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Quota_Performance__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota_Performance__c</fullName>
    <label>Monthly Quota Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>