force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Quota_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quota_Revenue__c</fullName>
    <label>Monthly Quota Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>