force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Monthly_Wins__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Wins__c</fullName>
    <label>Monthly Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>