force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/New_or_Tenured__c.field-meta.xml
<CustomField>
    <fullName>New_or_Tenured__c</fullName>
    <label>New or Tenured?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>