force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Number_of_meetings_12_months_percentage__c.field-meta.xml
<CustomField>
    <fullName>Number_of_meetings_12_months_percentage__c</fullName>
    <label>Number of meetings 12 months percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>