force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/Number_of_meetings_YTD_percentage__c.field-meta.xml
<CustomField>
    <fullName>Number_of_meetings_YTD_percentage__c</fullName>
    <label>Number of meetings YTD percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>