force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/of_annual_opptys_req_to_achieve_quot__c.field-meta.xml
<CustomField>
    <fullName>of_annual_opptys_req_to_achieve_quot__c</fullName>
    <label># of annual QO req to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>