force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/of_annual_qualified_opptys__c.field-meta.xml
<CustomField>
    <fullName>of_annual_qualified_opptys__c</fullName>
    <label># of annual qualified opptys req</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>